홈컨트롤러 헤드제거 어드민 컨트롤러 경로 재지정

--- a/project/src/main/resources/templates/admin/ad_main.html
+++ b/project/src/main/resources/templates/admin/ad_main.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>매출 조회</title>
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/ad_style.css">
 </head>
 <body>
     <nav class="sidebar">
