--- a/project/src/main/resources/templates/pet/reservation.html
+++ b/project/src/main/resources/templates/pet/reservation.html
@@ -15,78 +15,28 @@
     <!-- 헤더 -->
     <th:block th:replace="~{fragments/header::header}"></th:block>
 
-<section class="reservation-container">
+    <div class="room-list">
+    <!-- rooms : Controller에서 전달한 List<HotelRoom> -->
+        <div class="reservation-card" th:each="room : ${rooms}">
+            <!-- 이미지 -->
+            <img th:src="@{'/img/' + ${room.img}}" class="room-image" th:alt="${room.roomType} + ' 이미지'">
 
-    <!-- 객실 영역 -->
-    <div class="room-section">
-
-        <!-- 이미지 슬라이더 -->
-        <div class="room-image-slider">
-            <button class="prev">‹</button>
-            <img th:src="@{'/img/' + ${room.img}}" class="room-image" alt="객실 이미지">
-            <button class="next">›</button>
-        </div>
-
-        <!-- 객실 정보 -->
-        <div class="room-info">
-            <button class="prev-room">‹</button>
-
-            <div class="room-detail">
-                <h3 id="roomName">프리미엄 스위트</h3>
-                <p id="roomPrice">50,000원 / 1박</p>
+            <!-- 이미지 밑 텍스트 -->
+            <div class="room-info">
+                <p>객실 타입: <span th:text="${room.roomType}"></span></p>
+                <p>가격: <span th:text="${room.roomPrice}"></span></p>
+                <p>세부 사항: <span th:text="${room.etc}"></span></p>
+                <p>예약 상태: <span th:text="${room.active}"></span></p>
             </div>
-
-            <button class="next-room">›</button>
         </div>
     </div>
 
-    <!-- 날짜 선택 -->
-    <div class="date-section">
-        <label>
-            체크인
-            <input type="date" id="checkIn">
-        </label>
 
-        <label>
-            체크아웃
-            <input type="date" id="checkOut">
-        </label>
-    </div>
 
-    <!-- 부가 서비스 -->
-    <div class="service-section">
-        <h4>부가 서비스</h4>
-
-        <label class="service-card">
-            <input type="checkbox" data-price="30000">
-            <div>
-                <strong>그루밍 서비스</strong>
-                <p>+30,000원</p>
-            </div>
-        </label>
-
-        <label class="service-card">
-            <input type="checkbox" data-price="20000">
-            <div>
-                <strong>산책 케어</strong>
-                <p>+20,000원</p>
-            </div>
-        </label>
-    </div>
-
-    <!-- 요약 -->
-    <div class="summary">
-        <p id="summaryText">기간을 선택해주세요</p>
-        <hr class="dashed">
-        <p class="total-price" id="totalPrice">0원</p>
-    </div>
-
-    <button class="reserve-btn">예약하기</button>
-
-</section>
     <!-- 푸터 -->
     <th:block th:replace="~{fragments/footer::footer}"></th:block>
 
 <script src="script.js"></script>
 </body>
 </html>
+<!--  <img th:src="@{'/img/' + ${room.img}}" class="room-image" alt="객실 이미지"> -->
