--- a/project/src/main/resources/templates/fragments/header.html
+++ b/project/src/main/resources/templates/fragments/header.html
@@ -14,10 +14,44 @@
         </ul>
 
         <ul>
-            <li class="login"><a href="/로그인">로그인</a></li>
-            <li class="login"><a href="/회원가입">회원가입</a></li>
-        </ul>
+            <!-- 비로그인 -->
+            <li class="login" sec:authorize="isAnonymous()">
+                <a href="/login">로그인</a>
+            </li>
+            <li class="login" sec:authorize="isAnonymous()">
+                <a href="/join">회원가입</a>
+            </li>
 
+            <!-- 로그인 -->
+             <li class="login" sec:authorize="hasRole('ADMIN')">
+                <a href="/admin">관리자 페이지</a>
+            </li>
+            <li class="login" sec:authorize="isAuthenticated()">
+                <a href="/mypage">마이페이지</a>
+            </li>
+            <li class="login" sec:authorize="isAuthenticated()">
+                <a href="#" id="logoutLink">로그아웃</a>
+
+                <form id="logoutForm" action="/logout" method="post" style="display:none">
+                    <input type="hidden"
+                        th:name="${_csrf.parameterName}"
+                        th:value="${_csrf.token}">
+                </form>
+            </li>
+
+            <script>
+            document.addEventListener('DOMContentLoaded', () => {
+                const link = document.getElementById('logoutLink');
+                if (link) {
+                    link.addEventListener('click', e => {
+                        e.preventDefault();
+                        document.getElementById('logoutForm').submit();
+                    });
+                }
+            });
+            </script>
+        </ul>
+    
         
 
     </header>
