--- a/project/src/main/resources/templates/fragments/footer.html
+++ b/project/src/main/resources/templates/fragments/footer.html
@@ -20,7 +20,7 @@
             <section class="footer-section">
                 <p class="footer-title">고객센터</p>
                 <p>전화 : 02-1234-5678</p>
-                <p>이메일 : info@doghote.com</p>
+                <p>이메일 : info@doghotel.com</p>
                 <p>운영시간 : 09:00 ~ 18:00</p>
                 <p>연중무휴</p>
             </section>
