--- a/project/src/main/resources/templates/login/join.html
+++ b/project/src/main/resources/templates/login/join.html
@@ -52,7 +52,7 @@
                     <label for="address">주소</label>
                 </div>
                 <div class="form-floating my-2">
-                    <input type="date" id="editBirth" class="form-control mb-2"/>
+                    <input type="date" id="birth" class="form-control mb-2"/>
                     <label for="birth">생년월일</label>
                 </div>
                 <div class="form-floating my-2">
