--- a/project/src/main/resources/templates/admin/ad_trainer.html
+++ b/project/src/main/resources/templates/admin/ad_trainer.html
@@ -21,12 +21,12 @@ body { background-color: #f5f6f7; }
     <!-- 사이드바 -->
     <aside class="sidebar p-4 vh-100">
         <h5 class="mb-4">관리자 페이지</h5>
-        <nav class="nav flex-column gap-1">
-            <a class="nav-link" href="ad_main.html">📊 매출 조회</a>
-            <a class="nav-link" href="ad_usermanage.html">👥 회원 관리</a>
-            <a class="nav-link active" href="ad_trainer.html">🏇 훈련사 관리</a>
-            <a class="nav-link" href="ad_service.html">⚙️ 서비스 및 시설 관리</a>
-            <a class="nav-link" href="ad_notice.html">📝 공지사항</a>
+         <nav class="nav flex-column gap-1">
+            <a class="nav-link" th:href="@{/admin}">📊 매출 조회</a>
+            <a class="nav-link" th:href="@{/admin/usermanage}">👥 회원 관리</a>
+            <a class="nav-link" th:href="@{/admin/service}">⚙️ 서비스 및 시설 관리</a>
+            <a class="nav-link" th:href="@{/admin/trainer}">🏇 훈련사 관리</a>
+            <a class="nav-link" th:href="@{/admin/notice}">📝 공지사항</a>
         </nav>
     </aside>
 
