--- a/project/src/main/resources/templates/admin/ad_roomupdate.html
+++ b/project/src/main/resources/templates/admin/ad_roomupdate.html
@@ -156,7 +156,7 @@ document.getElementById("updateForm").addEventListener("submit", async function(
 		  const roomNo = document.getElementById("roomNo").value;
 		
 		  try {
-		    const response = await fetch(`/admin/delete/${roomNo}`, {
+		    const response = await fetch(`/admin/room/delete/${roomNo}`, {
 		      method: "DELETE",
           headers: { [csrfHeader]: csrfToken },
 		    });
